# Phoenix

.github/workflows/: CppBuild.yml
Phoenix/: CMakeLists.txt
Phoenix/Client/Source/: CMakeLists.txt  Client.cpp  Game.cpp  GameTools.cpp  InputMap.cpp  InputQueue.cpp  Main.cpp  Network.cpp
Phoenix/Client/Source/Game/: CMakeLists.txt  Game.cpp  InputMap.cpp  InputQueue.cpp  MainMenu.cpp  Network.cpp
Phoenix/Client/Source/Game/Overlays/: Crosshair.cpp  DebugOverlay.cpp  EscapeMenu.cpp  GameTools.cpp
Phoenix/Client/Source/GameState/: CMakeLists.txt  GameStateManager.cpp  Timestep.cpp
Phoenix/Client/Source/Graphics/: CMakeLists.txt  Camera.cpp  ChunkRenderer.cpp  ImGuiExtensions.cpp  TexturePacker.cpp  Window.cpp
Phoenix/Client/Source/Renderer/: CMakeLists.txt
Phoenix/Common/Include/Common/: CLIParser.hpp  CMakeLists.txt  GameNetwork.hpp  Player.hpp  Save.hpp  Settings.hpp  Singleton.hpp
Phoenix/Common/Include/Common/CMS/: ModManager.hpp
Phoenix/Common/Include/Common/Game/: Actor.hpp  CMakeLists.txt  Commander.hpp  NetworkEvents.hpp  PlayerView.hpp
Phoenix/Common/Include/Common/Game/Components/: CMakeLists.txt
Phoenix/Common/Include/Common/Game/Content/: CMakeLists.txt  Mod.hpp  ModManager.hpp  ModManager.inl
Phoenix/Common/Include/Common/Game/Systems/: CMakeLists.txt
Phoenix/Common/Include/Common/Math/: Vector2.hpp
Phoenix/Common/Include/Common/Network/: CMakeLists.txt  Host.hpp  Network.hpp
Phoenix/Common/Include/Common/Serialization/: Serializer.hpp
Phoenix/Common/Include/Common/Voxels/: Map.hpp
Phoenix/Common/Source/: CLIParser.cpp  (+3 more)
(+52 files in other folders)
